# voice-mirror-electron

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  ideas.md  install.ps1  install.sh  jsconfig.json  launch.sh  package-lock.json  package.json  restart.sh  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: antivirus.yml  build.yml  ci.yml  codeql.yml  installer-test.yml  scorecard.yml
cli/: README.md  banner.mjs  checks.mjs  dependency-setup.mjs  doctor.mjs  index.mjs  ollama-setup.mjs  python-setup.mjs  setup.mjs
docs/: ARCHITECTURE.md  BROWSER-CONTROL-REFERENCE.md  CAAL-COMPARISON.md  CHANGELOG-ARCHIVE.md  CODE-QUALITY-PLAN.md  CONFIGURATION.md  DEVELOPMENT.md  FUTURE-IMPROVEMENTS.md  IDEAS.md  IPC-PROTOCOL.md  POLISH-PLAN.md  PROVIDER-SYSTEM.md  README.md  THEME-SYSTEM.md  VOICE-PIPELINE.md
docs/internal/: DEV-SERVER-DETECTION.md  INSTALLER-PLAN.md
electron/: README.md  claude-spawner.js  cli-spawner.js  config.js  constants.js  font-manager.js  ipc-handlers.js  ipc-validators.js  log-viewer.html  main.js  overlay.html  preload-log-viewer.js  preload.js
electron/browser/: browser-controller.js  browser-fetch.js  browser-search.js  search-utils.js  serper-search.js  webview-actions.js  webview-cdp.js  webview-snapshot.js
electron/ipc/: README.md  ai.js  config.js  index.js  misc.js  screen.js  validators.js  voice.js  window.js
electron/js/: browser-panel.js  chat-input.js  chat-store.js  log.js  main.js  markdown.js  messages.js  navigation.js  notifications.js  orb-canvas.js  settings.js  state.js  terminal.js  theme-engine.js  utils.js
electron/lib/: filtered-env.js  json-file-watcher.js  ollama-launcher.js  safe-path.js  windows-screen-capture.js
electron/providers/: README.md  base-provider.js  claude-instructions.js  claude-provider.js  claude-spawner.js  cli-provider.js  cli-spawner.js  index.js  openai-provider.js  tui-renderer.js
electron/renderer/: README.md  ai-status.js  browser-panel.js  chat-input.js  chat-store.js  image-handler.js  main.js  messages.js  navigation.js  notifications.js  orb-canvas.js  resize.js  settings-ai.js  settings-appearance.js  settings-dependencies.js  settings-voice.js  settings.js  state.js  terminal.js  theme-engine.js  utils.js  voice-handler.js  whats-new.js
electron/services/: README.md  ai-manager.js  browser-watcher.js  diagnostic-collector.js  diagnostic-watcher.js  hotkey-manager.js  inbox-watcher.js  log-viewer.js  logger.js  perf-monitor.js  platform-paths.js  provider-detector.js  push-to-talk.js  python-backend.js  screen-capture-watcher.js  uiohook-shared.js  update-checker.js  voice-backend.js  wayland-orb.js
electron/styles/: base.css  chat.css  notifications.css  orb.css  panel.css  settings.css  sidebar.css  terminal.css  tokens.css
electron/templates/: settings-ai.html  settings-appearance.html  settings-dependencies.html  settings-general.html  settings-voice.html
electron/tools/: definitions.js  index.js  openai-schema.js  prompts.js
electron/window/: README.md  index.js  tray.js
mcp-server/: index.js  package.json  paths.js
mcp-server/handlers/: browser.js  core.js  diagnostic.js  memory.js  n8n.js  screen.js  voice-clone.js
mcp-server/scripts/: download-model.js
python/: CLAUDE.md  README.md  electron_bridge.py  global_hotkey.py  notifications.py  requirements-optional.txt  requirements.txt  settings.py  test_global_hotkey.py  text_injector.py  tts.py  voice_agent.py
python/audio/: __init__.py  state.py  vad.py  wake_word.py
python/models/: hey_claude_v2.onnx
python/providers/: __init__.py  config.py  inbox.py
python/shared/: n8n_client.py  paths.py
python/stt/: parakeet.py
python/tests/: test_double_speak.py  test_vad.py
python/tts/: base.py  factory.py  kokoro.py  qwen.py
scripts/: launch-hidden.vbs  launch.js
src/: App.svelte
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai.rs  chat.rs  files.rs  lens.rs  lsp.rs  mod.rs  shell.rs  shortcuts.rs  tools.rs  voice.rs  window.rs
src-tauri/src/config/: schema.rs
src-tauri/src/ipc/: pipe_server.rs  protocol.rs
src-tauri/src/lsp/: client.rs  detection.rs  mod.rs  types.rs
src-tauri/src/mcp/: mod.rs  pipe_router.rs  server.rs
src-tauri/src/mcp/handlers/: browser.rs  core.rs  facades.rs  memory.rs  mod.rs  n8n.rs  voice_clone.rs
src-tauri/src/providers/: cli.rs  dictation.rs  manager.rs  mod.rs
src-tauri/src/providers/cli/: instructions.rs  mcp_config.rs  mod.rs  status_line.rs
src-tauri/src/services/: browser_bridge.rs  file_watcher.rs  inbox_watcher.rs  input_hook.rs  logger.rs  mod.rs
src-tauri/src/shell/: mod.rs
src-tauri/src/voice/pipeline/: mod.rs  playback.rs  ring_buffer.rs
src-tauri/src/voice/tts/: crypto.rs  edge_tts.rs  kokoro_impl.rs  mod.rs  mp3_decode.rs  phrase_split.rs
src/lib/: api.js  editor-theme.js  file-icons.js  markdown.js  orb-presets.js  providers.js  voice-adapters.js
src/styles/: base.css  settings.css
test/: README.md
test/api/: api-diff.test.cjs  api-files.test.cjs  api-lsp.test.cjs  api-signatures.test.cjs  file-crud.test.cjs  search-files.test.cjs  shell-api.test.cjs
test/components/: app.test.cjs  chat-components.test.cjs  command-palette.test.cjs  diff-viewer.test.cjs  editor-context-menu.test.cjs  file-context-menu.test.cjs  (+19 more)
voice-core/: Cargo.toml
voice-core/src/: main.rs
voice-core/src/audio/: capture.rs  mod.rs  ring_buffer.rs  state.rs
voice-core/src/config/: mod.rs  paths.rs
voice-core/src/hotkey/: linux.rs  macos.rs  mod.rs  windows.rs
voice-core/src/inbox/: mod.rs
voice-core/src/ipc/: bridge.rs  mod.rs
voice-core/src/stt/: cloud.rs  mod.rs  parakeet.rs  whisper.rs
voice-core/src/text_injector/: mod.rs
voice-core/src/tts/: cloud.rs  kokoro.rs  mod.rs  playback.rs
voice-core/src/vad/: energy.rs  mod.rs  silero.rs
voice-core/src/wake_word/: mod.rs  oww.rs
(+160 files in other folders)
