[package]
name = "voice-mirror"
version = "0.1.0"
description = "Voice-controlled AI agent overlay for your desktop"
authors = [""]
edition = "2021"
default-run = "voice-mirror"

[lib]
name = "voice_mirror_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"

# MCP handler dependencies
notify = "7"
url = "2"
regex = "1"

# Voice engine dependencies
cpal = "0.15"
rodio = "0.19"

# STT: whisper-rs (C++ FFI to whisper.cpp)
whisper-rs = { version = "0.15", optional = true }

# TTS: ONNX Runtime for Kokoro local inference
ort = { version = "2.0.0-rc.11", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
byteorder = { version = "1", optional = true }

# TTS: MP3 decode for Edge TTS cloud audio
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }

# Tool calling: UUID generation for tool call IDs
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "voice-mirror-mcp"
path = "src/bin/mcp.rs"

[features]
default = []
whisper = ["whisper-rs"]
onnx = ["ort", "zip", "byteorder"]
native-ml = ["whisper", "onnx"]
