[package]
name = "voice-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
ort = { version = "2.0.0-rc.11", optional = true }
whisper-rs = { version = "0.13", optional = true }
rodio = "0.21"
ringbuf = "0.4"
rdev = "0.5"
arboard = "3"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
byteorder = { version = "1", optional = true }
base64 = "0.22"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
http = "1"
symphonia = { version = "0.5", default-features = false, features = ["mp3"] }
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"

[features]
default = ["native-ml"]
# ONNX Runtime for Kokoro TTS, Silero VAD, OpenWakeWord (downloads pre-built binaries)
onnx = ["ort", "zip", "byteorder"]
# whisper.cpp for local STT (requires C compiler: MSVC on Windows, gcc/clang on Linux)
whisper = ["whisper-rs"]
# Both ONNX + whisper.cpp
native-ml = ["onnx", "whisper"]

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }

[profile.release]
opt-level = 2
lto = "thin"
strip = true
